MB-8274 remove mutex in CouchNotifier::selectBucket()

The selectBucket() does not require to lock mutex because it is
being synchronized by its callers. Otherwise, this could cause
a deadlock when resetConnection() is being initiated by the same
caller.

Change-Id: Ibe1f4837e9550b7a25534db7e5557be878d83a36
Reviewed-on: http://review.couchbase.org/26300
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Jin Lim <jin@couchbase.com>